--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Hello git</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae perspiciatis quaerat rerum, ad ut, ipsam, delectus unde consequatur tempore sit labore? Minima at commodi minus reprehenderit ipsum hic similique debitis.</p>
 </body>
 </html>
