--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Hello git</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae perspiciatis quaerat rerum, ad ut, ipsam, delectus unde consequatur tempore sit labore? Minima at commodi minus reprehenderit ipsum hic similique debitis.</p>
+  <button>Click me</button>
 </body>
 </html>
